--- a/discografias/discografia-lamb.html
+++ b/discografias/discografia-lamb.html
@@ -33,7 +33,7 @@
                     </ul>
                 </li>
                 <li class="dropdown">
-                    <a href="Recomendaciones.html">Mas Generos</a>
+                    <a href="../Recomendaciones.html">Mas Generos</a>
                     <ul class="submenu">
                         <li><a href="black-metal.html">Black Metal</a></li>
                         <li><a href="death-metal.html">Death Metal</a></li>
