--- a/documentales/documentales.html
+++ b/documentales/documentales.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--- ICONO QUE SE VE EN LA PESTAÑA --->
+    <link rel="shortcut icon" href="../img/maloik.png">
     <!--- UN ARCHIVO CSS PARA TODO --->
     <link rel="stylesheet" href="../css/style.css">
     <!--- KIT DE ICONOS FONT AWESOME --->
