--- a/registro.html
+++ b/registro.html
@@ -17,9 +17,9 @@
                 <li><a href="index.html">Inicio</a></li>
                 <li><a href="albumes.html">Albumes</a></li>
                 <li><a href="playlist.html">Playlists</a></li>
-                <li>
+                <li class="dropdown">
                     <a href="documentales/documentales.html">Documentales</a>
-                    <ul class="submen">
+                    <ul class="submenu">
                         <li><a href="documentales/conciertos.html">Festivales</a></li>
                     </ul>
                 </li>
