pagina de metal

--- a/albumes.html
+++ b/albumes.html
@@ -110,7 +110,8 @@
         <p>Estos son los albumes mas odiados de la historia del metal, y si el metal también tiene albumes malos <a href="albumes-odidados.html">¡Estos son!</a></p>  
         <br>
         <p>Toda la fuente de información fue sacada de <span>Wikipedia</span> <a href="https://es.wikipedia.org/">Aqui!</a></p>
-          
+        <br>
+        <p>Estos son mis albumes favoritos de metal, escuchalos aqui > <a href="https://music.youtube.com/playlist?list=PLZo5dSs6gkn_5dRx0zXI8ynmeYj6kwPye&si=AVk3iKkNizSD7Jjr">Albums</a>, y añadi mis albumes favoritos de twenty one pilots!</p>
     </div>
 
     <!--- PIE DE PAGINA --->
@@ -123,7 +124,7 @@
             <i class="fab fa-facebook"><a href="#">Facebook</a></i>
             <i class="fab fa-twitter"><a href="#">Twitter</a></i>
             <i class="fab fa-instagram"><a href="#">Instagram</a></i>
-            <i class="fab fa-youtube"><a href="#">Youtube</a></i>
+            <i class="fa-brands fa-linkedin">Linkedin</i>
         </footer>
 
 </body> 
