--- a/discografias/discografia-death.html
+++ b/discografias/discografia-death.html
@@ -144,6 +144,8 @@
         <h1>Toda esta informacion fue sacada de wikipedia! > <a href="https://es.wikipedia.org/">¡Aqui!</a></h1>
         <br>
         <p>Comenta cual es tu album favotrito de death y si disfrutaste de la discografia de death > <a href="../registro.html">¡Comenta aqui!</a></p>
+        <br>
+        <p>Una de las mejores discografias del death metal, Death es la banda influyente del death metal ya que empezó en 1983 es la mas antigua en el genero.</p>
    </div>
    <!--- PIE DE PAGINA --->
    <div class="pie-pagina">
