--- a/recomendaciones/trash-metal.html
+++ b/recomendaciones/trash-metal.html
@@ -141,7 +141,7 @@
             <i class="fab fa-facebook"><a href="#">Facebook</a></i>
             <i class="fab fa-twitter"><a href="#">Twitter</a></i>
             <i class="fab fa-instagram"><a href="#">Instagram</a></i>
-            <i class="fab fa-youtube"><a href="#">Youtube</a></i>
+            <i class="fa-brands fa-linkedin">Linkedin</i>
         </footer>
 
 </body>
