--- a/discografias/discografia-slayer.html
+++ b/discografias/discografia-slayer.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--- KIT DE ICONOS FONT AWESOME --->
     <script src="https://kit.fontawesome.com/d9947da715.js" crossorigin="anonymous"></script>
-    <title>Dicografia slayer</title>
+    <title>Dicografia Slayer</title>
 </head>
 <body>
     
@@ -197,5 +197,17 @@
             <p>Espero que disfrutes de la discografia de la banda de trash metal slayer</p>
         </div>
    </div>
+
+   <div class="pie-pagina">
+    <footer>
+        <p>Nuestra pagina web, sugerencias de albumes, bandas y mas</p>
+        <h4>Developer: Nicolas &copy;2024</h4>
+        <!--- ICONOS --->
+        <i class="fab fa-facebook"><a href="#">Facebook</a></i>
+        <i class="fab fa-twitter"><a href="#">Twitter</a></i>
+        <i class="fab fa-instagram"><a href="#">Instagram</a></i>
+        <i class="fa-brands fa-linkedin">Linkedin</i>
+    </footer>
+</div>
 </body>
 </html>
