--- a/discografias/discografia-slipknot.html
+++ b/discografias/discografia-slipknot.html
@@ -149,15 +149,16 @@
 
    <!--- PIE DE PAGINA --->
    <div class="pie-pagina">
-    <footer>
-        <p>Nuestra pagina web, sugerencias de albumes, bandas y mas</p>
-        <h4>Developer: Nicolas &copy;2024</h4>
-        <!--- ICONOS --->
-        <i class="fab fa-facebook"><a href="#">Facebook</a></i>
-        <i class="fab fa-twitter"><a href="#">Twitter</a></i>
-        <i class="fab fa-instagram"><a href="#">Instagram</a></i>
-        <i class="fab fa-youtube"><a href="#">Youtube</a></i>
-    </footer>
+        <footer>
+            <p>Nuestra pagina web, sugerencias de albumes, bandas y mas</p>
+            <h4>Developer: Nicolas &copy;2024</h4>
+            <!--- ICONOS --->
+            <i class="fab fa-facebook"><a href="#">Facebook</a></i>
+            <i class="fab fa-twitter"><a href="#">Twitter</a></i>
+            <i class="fab fa-instagram"><a href="#">Instagram</a></i>
+            <i class="fab fa-youtube"><a href="#">Youtube</a></i>
+        </footer>
+    </div>
 </div>
 </body>
 </html>
