--- a/discografias/discografia-testament.html
+++ b/discografias/discografia-testament.html
@@ -317,7 +317,7 @@
             <i class="fab fa-facebook"><a href="#">Facebook</a></i>
             <i class="fab fa-twitter"><a href="#">Twitter</a></i>
             <i class="fab fa-instagram"><a href="#">Instagram</a></i>
-            <i class="fab fa-youtube"><a href="#">Youtube</a></i>
+            <i class="fa-brands fa-linkedin">Linkedin</i>
         </footer>
     </div>
 </body>
