--- a/documentales/conciertos.html
+++ b/documentales/conciertos.html
@@ -198,5 +198,17 @@
         </div>
     </div>
 
+    <!--- PIE DE PAGINA --->
+    <div class="pie-pagina">
+        <footer>
+            <p>Nuestra pagina web, sugerencias de albumes, bandas y mas</p>
+            <h4>Developer: Nicolas &copy;2024</h4>
+            <!--- ICONOS --->
+            <i class="fab fa-facebook"><a href="#">Facebook</a></i>
+            <i class="fab fa-twitter"><a href="#">Twitter</a></i>
+            <i class="fab fa-instagram"><a href="#">Instagram</a></i>
+            <i class="fa-brands fa-linkedin">Linkedin</i>
+        </footer>
+    </div>
 </body>
 </html>
