--- a/index.html
+++ b/index.html
@@ -247,16 +247,17 @@
 
     </div>
 
+    <!--- PIE DE PAGINA  --->
     <div class="pie-pagina">
         <footer>
-            <p>Nuestra pagina web, sugerencias de albumes, bandas y mas</p>
+            <p>Nuestra pagina web, sugerencias de albumes, bandas y más</p>
             <h4>Developer: Nicolas &copy;2024</h4>
             <p>Contactanos: <a href="#">sugbandas@gmail.com</a></p>
             <!--- ICONOS --->
-            <i class="fab fa-facebook"><a href="#">Facebook</a></i>
-            <i class="fab fa-twitter"><a href="#">Twitter</a></i>
+            <i class="fa-brands fa-facebook"><a href="#">Facebook</a></i>
+            <i class="fa-brands fa-x-twitter"><a href="#">Twitter</a></i>
             <i class="fab fa-instagram"><a href="#">Instagram</a></i>
-            <i class="fab fa-youtube"><a href="#">Youtube</a></i>
+            <i class="fa-brands fa-linkedin"><a href="#">Linkedin</a></i>
         </footer>
     </div>
 </body>
