--- a/mejores_rock/peores-rock.html
+++ b/mejores_rock/peores-rock.html
@@ -141,7 +141,7 @@
         <i class="fab fa-facebook"><a href="#">Facebook</a></i>
         <i class="fab fa-twitter"><a href="#"></a>Twitter</i>
         <i class="fab fa-instagram"><a href="#"></a>Instagram</i>
-        <i class="fab fa-youtube"><a href="#"></a>Youtube</i>
+        <i class="fa-brands fa-linkedin">Linkedin</i>
     </footer>
 </div>
 </body>
