--- a/recomendaciones/death-metal.html
+++ b/recomendaciones/death-metal.html
@@ -129,6 +129,10 @@
         <div class="division"></div>
         <br>
         <h1>Toda la fuente de información fue sacada de <span>Wikipedia</span> <a href="https://es.wikipedia.org/">Aqui!</a></h1>
+        <br>
+        <p>Estas bandas no las hemos escuchado mucho pero son alternativas que puedes escuchar para empezar en el death metal o tambien 
+            puedes escuchar cannibal corpse, deicide, death entre otras bandas de death metal, espero que disfrutes de estas bandas de death metal 
+        </p>
     </div>
 
     <!--- PIE DE PAGINA --->
@@ -141,7 +145,7 @@
             <i class="fab fa-facebook"><a href="#">Facebook</a></i>
             <i class="fab fa-twitter"><a href="#">Twitter</a></i>
             <i class="fab fa-instagram"><a href="#">Instagram</a></i>
-            <i class="fab fa-youtube"><a href="#">Youtube</a></i>
+            <i class="fa-brands fa-linkedin">Linkedin</i>
         </footer>
     </div>
 </body>
